--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <!-- CSS import files -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="js/app/assets/app.css">
+    <link rel="stylesheet" href="js/app/modules/home/assets/_home.css">
 
   </head>
 
