--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="js/app/assets/app.css">
     <link rel="stylesheet" href="js/app/modules/home/assets/_home.css">
+    <link href="https://fonts.googleapis.com/css?family=Lobster|Pacifico|Raleway" rel="stylesheet">
 
   </head>
 
@@ -39,10 +40,10 @@
       <script src="js/app/modules/home/controllers/home.controller.js"></script>
       <script src="js/app/modules/home/controllers/modal.controller.js"></script>
 
-      <!-- Tables page module -->
-      <script src="js/app/modules/tables/tables.module.js"></script>
-      <script src="js/app/modules/tables/tables.routes.js"></script>
-      <script src="js/app/modules/tables/tables.controller.js"></script>
+      <!-- Menu page module -->
+      <script src="js/app/modules/menu/menu.module.js"></script>
+      <script src="js/app/modules/menu/menu.routes.js"></script>
+      <script src="js/app/modules/menu/controllers/menu.controller.js"></script>
 
   </body>
 </html>
